apps/gitlab/gitlab-backup-mirror/networkpolicies/egress-gitlab-backup-mirror.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-gitlab-backup-mirror
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      job: gitlab-backup-mirror
  egress:
    - toEndpoints:
        - matchLabels:
            release: gitlab
            app: minio
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "9000"
    - toServices:
        - k8sService:
            serviceName: minio
            namespace: minio
      toPorts:
        - ports:
            - port: "9000"
    - toServices:
        - k8sService:
            serviceName: prometheus-pushgateway
            namespace: monitoring
      toPorts:
        - ports:
            - port: "9091"
