apps/gitlab/gitlab-backup-mirror/networkpolicies/gitlab-backup-mirror.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-backup-mirror
  namespace: gitlab
spec:
  description: "Allow mirrIO to connect to gitlab-minio and minIO and push status to prometheus pushgateway"
  endpointSelector:
    matchLabels:
      app: gitlab-backup-mirror
      component: job
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            release: gitlab
            app: minio
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "9000" # gitlab uses a old version of minio => port is for web-ui and api
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: minio
            app.kubernetes.io/name: minio
            io.kubernetes.pod.namespace: minio
      toPorts:
        - ports:
            - port: "9000" # minio-api
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: prometheus-pushgateway
            namespace: monitoring
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
